--- a/DragonBoating/app/src/main/AndroidManifest.xml
+++ b/DragonBoating/app/src/main/AndroidManifest.xml
@@ -11,10 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimerActivity" android:parentActivityName=".MainActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-            android:keepScreenOn="true">
-        </activity>
+        <activity
+            android:name=".ResultsActivity"
+            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".TimerActivity"
+            android:keepScreenOn="true"
+            android:parentActivityName=".MainActivity"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
